using fragment for showing alerts

--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
+		<div th:replace="fragments/alert :: alert_headline"></div>
 		<div class="row">			
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<a class="btn btn-primary" role="button" th:href="@{/administration/createEmMatches}" th:text="#{administration.createEmMatches}"></a>
