--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content" class="container">
-		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
+		<div th:replace="fragments/alert :: alert_headline"></div>
 		<form id="changePasswordForm" th:action="@{/profile/changePassword}" th:object="${changePasswordCommand}" action="#" method="post" role="form">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">										
