--- a/src/main/resources/templates/admin/active_users.html
+++ b/src/main/resources/templates/admin/active_users.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
+		<div th:replace="fragments/alert :: alert_headline"></div>
 		<h1 th:text="#{active.users.title}"></h1>
 		<div class="col-xs-12 col-sm-6 col-md-4">			
 			<div class="row" th:each="sessionTracking : ${userList}">
