--- a/src/main/resources/templates/bet/list_open.html
+++ b/src/main/resources/templates/bet/list_open.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<div class="alert" th:classappend="${globalMessage.cssClass}" th:if="${globalMessage}" th:text="${globalMessage.text}"></div>
+		<div th:replace="fragments/alert :: alert_headline"></div>
+		
 		<h1 th:if="${not #lists.isEmpty(matchesToBet)}" th:text="#{bet.listOpen.title}"></h1>
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-4" th:each="matchCommand : ${matchesToBet}">
