bugfix null pointer if only one goal has been set in result

--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -13,6 +13,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<h1 th:text="#{matchresult.heading}"></h1>
 					<input type="hidden" th:field="*{matchId}" />
+					<input type="hidden" th:field="*{groupMatch}" />
 					<div class="form-group">
 						<div class="row center">
 							<div class="col-xs-6">
