--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -43,11 +43,14 @@
 				            <li th:class="${pageState_matches_group_GROUP_D}"><a href="#matches" th:href="@{/matches/group/GROUP_D}" th:text="#{group} + ' D'"></a></li>
 				            <li th:class="${pageState_matches_group_GROUP_E}"><a href="#matches" th:href="@{/matches/group/GROUP_E}" th:text="#{group} + ' E'"></a></li>
 				            <li th:class="${pageState_matches_group_GROUP_F}"><a href="#matches" th:href="@{/matches/group/GROUP_F}" th:text="#{group} + ' F'"></a></li>
+				            <li th:class="${pageState_matches_group_GROUP_G}"><a href="#matches" th:href="@{/matches/group/GROUP_G}" th:text="#{group} + ' G'"></a></li>
+				            <li th:class="${pageState_matches_group_GROUP_H}"><a href="#matches" th:href="@{/matches/group/GROUP_H}" th:text="#{group} + ' H'"></a></li>
 				            <li class="divider" role="separator"></li>
 				            <li th:class="${pageState_matches_group_ROUND_OF_SIXTEEN}"><a href="#matches" th:href="@{/matches/group/ROUND_OF_SIXTEEN}" th:text="#{group.entry.ROUND_OF_SIXTEEN}"></a></li>
 				            <li th:class="${pageState_matches_group_QUARTER_FINAL}"><a href="#matches" th:href="@{/matches/group/QUARTER_FINAL}" th:text="#{group.entry.QUARTER_FINAL}"></a></li>
 				            <li th:class="${pageState_matches_group_SEMI_FINAL}"><a href="#matches" th:href="@{/matches/group/SEMI_FINAL}" th:text="#{group.entry.SEMI_FINAL}"></a></li>
 				            <li th:class="${pageState_matches_group_FINAL}"><a href="#matches" th:href="@{/matches/group/FINAL}" th:text="#{group.entry.FINAL}"></a></li>			
+				            <li th:class="${pageState_matches_group_GAME_FOR_THIRD}"><a href="#matches" th:href="@{/matches/group/GAME_FOR_THIRD}" th:text="#{group.entry.GAME_FOR_THIRD}"></a></li>
 				        </ul>
 			        </li>
 			        <li class="dropdown" th:classappend="${pageState_info}">
