--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -9,6 +9,11 @@
 		<div th:replace="fragments/alert :: alert_headline"></div>
 		<div class="row">			
 			<div class="col-xs-12 col-sm-6 col-md-4">
+				<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}"></a>
+			</div>
+		</div>
+		<div class="row">			
+			<div class="col-xs-12 col-sm-6 col-md-4">
 				<form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
 					<div class="form-group">
 						<label th:text="#{excel.upload.file}"></label><br/>
