--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -7,7 +7,7 @@
 <body>
 	<nav th:fragment="menu" class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
-			<div class="navbar-header" th:if="${@securityBean.isUserLoggedIn()}">
+			<div class="navbar-header" th:if="${@securityService.isUserLoggedIn()}">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -17,7 +17,7 @@
 				<a class="navbar-brand" href="#" th:href="@{/matches/upcoming}"><span class="glyphicon glyphicon-home"></span></a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
-				<ul th:if="${@securityBean.isUserLoggedIn()}" class="nav navbar-nav">
+				<ul th:if="${@securityService.isUserLoggedIn()}" class="nav navbar-nav">
 					<li th:class="${pageState_ranking}"><a href="#bet" th:href="@{/ranking}" th:text="#{navigation.ranking}"></a></li>
 					<li class="dropdown" th:classappend="${pageState_betting}">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -77,7 +77,7 @@
 				        	<li th:class="${pageState_user}" sec:authorize="hasAuthority('PERM_USER_ADMINISTRATION')"><a href="#user" th:href="@{/user}" th:text="#{navigation.user}"></a></li>
 					  		<li th:class="${pageState_buildinfo}" sec:authorize="hasAuthority('PERM_BUILD_INFO')"><a href="#buildinfo" th:href="@{/buildinfo}" th:text="#{navigation.buildInfo}"></a></li>
 					  		<li th:class="${pageState_administration_active_users}" sec:authorize="hasAuthority('PERM_SHOW_ACTIVE_USERS')"><a href="#activeUsers" th:href="@{/administration/active/users}" th:text="#{navigation.activeUserList}"></a></li>
-					  		<li th:if="${@securityBean.isDemoDataMenuEntryEnabled()}" th:class="${pageState_administration}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')"><a href="#administration" th:href="@{/administration}" th:text="#{navigation.dataCreation}"></a></li>
+					  		<li th:if="${@securityService.isDemoDataMenuEntryEnabled()}" th:class="${pageState_administration}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')"><a href="#administration" th:href="@{/administration}" th:text="#{navigation.dataCreation}"></a></li>
 					  		<li th:class="${pageState_excelimport}" sec:authorize="hasAuthority('PERM_ADMINISTRATION')"><a href="#excelimport" th:href="@{/excelimport/show}" th:text="#{navigation.excelimport}"></a></li>
 			        	</ul>
 			        </li>
@@ -90,7 +90,7 @@
                             <li><a th:href="${urlBuilder.replaceQueryParam('lang', 'en').toUriString()}" class="language"><img src="/images/flags/en.png" th:text="' '+#{language.en}" /></a></li>
                         </ul>
                     </li>
-					<li th:if="${@securityBean.isUserLoggedIn()}" class="dropdown" th:classappend="${pageState_profile}">
+					<li th:if="${@securityService.isUserLoggedIn()}" class="dropdown" th:classappend="${pageState_profile}">
 						<a href="#" th:inline="text" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <span class="glyphicon glyphicon-user"></span> <span sec:authentication="name"></span><span class="caret"></span>
                         </a>
@@ -98,7 +98,7 @@
 							<li th:class="${pageState_profile_changePassword}"><a href="#changePassword" th:href="@{/profile/changePassword}" th:text="#{navigation.changePassword}"></a></li>
 						</ul>						
 					</li>
-					<li th:if="${@securityBean.isUserLoggedIn()}">
+					<li th:if="${@securityService.isUserLoggedIn()}">
 						<a th:href="@{/logout}">
 							<span class="glyphicon glyphicon-log-out"></span>
 							<span th:text="#{navigation.logout}" th:remove="tag"></span>
