added button to delete all bets and matches

--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -16,6 +16,12 @@
 				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
 			</div>
 		</div>
+		<hr/>
+		<div class="row">			
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<a class="btn btn-danger" role="button" th:href="@{/administration/deleteAllBetsAndMatches}" th:text="#{administration.deleteAllBetsAndMatches}"></a>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
