--- a/src/main/resources/templates/admin/administration.html
+++ b/src/main/resources/templates/admin/administration.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
-<head>
-	<title th:text="#{administration.title}"></title>
-</head>
-<body>
-	<div layout:fragment="content">
-		<div th:replace="fragments/alert :: alert_headline"></div>
-		<div class="row">			
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<a class="btn btn-primary" role="button" th:href="@{/administration/createRandomMatches}" th:text="#{administration.createRandomMatches}"></a>
-				<br/><br/>
-				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
-				<br/><br/>
-				<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
+	<head>
+		<title th:text="#{administration.title}"></title>
+	</head>
+	<body>
+		<div layout:fragment="content">
+			<div th:replace="fragments/alert :: alert_headline"></div>
+			<div class="row">			
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a class="btn btn-primary" role="button" th:href="@{/administration/createRandomMatches}" th:text="#{administration.createRandomMatches}"></a>
+					<br/><br/>
+					<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoBets}" th:text="#{administration.demoBetsAllUsers}"></a>
+					<br/><br/>
+					<a class="btn btn-primary" role="button" th:href="@{/administration/createDemoResults}" th:text="#{administration.testResultsAllUsers}"></a>
+				</div>
 			</div>
+			<hr/>
+			<div class="row">			
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<a id="dialog-confirm" class="btn btn-danger" role="button" th:href="@{/administration/deleteAllBetsAndMatches}" th:text="#{administration.deleteAllBetsAndMatches}"
+					onclick="return confirm('Sure ?');"></a>
+				</div>			
+			</div>		
 		</div>
-		<hr/>
-		<div class="row">			
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<a class="btn btn-danger" role="button" th:href="@{/administration/deleteAllBetsAndMatches}" th:text="#{administration.deleteAllBetsAndMatches}"></a>
-			</div>
-		</div>
-	</div>
-</body>
+	</body>
 </html>
