--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -8,14 +8,16 @@
 	<div layout:fragment="content">
 		<div th:replace="fragments/alert :: alert_headline"></div>
 		<h1 th:text="#{excel.import.title}"></h1>
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-4">
+		<div class="col-xs-12 col-sm-6 col-md-4">
+			<div class="row">
 				<a href="#" th:href="@{/excelimport/download/template}" th:text="#{excel.download.template}" class="btn btn-primary"></a>
 			</div>
-		</div>
-		<br/>
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-4">
+			<hr/>
+			<div class="row">
+				<a href="#" th:href="@{/excelimport/download/confcup2017}">Conferderations Cup 2017</a>
+			</div>
+			<hr/>
+			<div class="row">
 				<form th:action="@{/excelimport/upload}" th:object="${excelUploadCommand}" method="post" enctype="multipart/form-data" role="form">
 					<div class="form-group">
 						<label th:text="#{excel.upload.file}"></label><br/>
