--- a/src/main/resources/templates/user/crop_image.html
+++ b/src/main/resources/templates/user/crop_image.html
@@ -10,8 +10,9 @@
 		<form id="userForm" th:action="@{/cropping}" method="post" enctype="multipart/form-data" role="form">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
-					<img class="my-image" th:src="@{/images/bild1.jpg}" width="100" height="100"/>
-							
+					<div style="width: 300px; height: 300px">
+						<img class="my-image" th:src="@{/images/bild1.jpg}" width="100" height="100"/>
+					</div>
 				</div>
 			</div>
 		</form>
