--- a/src/main/resources/templates/user/crop_image.html
+++ b/src/main/resources/templates/user/crop_image.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div style="width: 300px; height: 300px">
-						<img class="my-image" th:src="@{/images/bild1.jpg}" width="100" height="100"/>
+						<img class="my-image" th:src="@{/images/bild1.jpg}"/>
 					</div>
 				</div>
 			</div>
