update cropping image

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -27,5 +27,6 @@
 		<script type="text/javascript" src="../../static/js/datepicker-selection.js" th:src="@{/js/datepicker-selection.js}" charset="UTF-8"></script>		
 		<script type="text/javascript" src="../../static/js/custom.js" th:src="@{/js/custom.js}" charset="UTF-8"></script>
 		<script type="text/javascript" th:src="@{/js/croppie.min.js}" charset="UTF-8"></script>
+		<script type="text/javascript" th:src="@{/js/exif.js}" charset="UTF-8"></script>
 	</body>
 </html>
