--- a/src/main/resources/templates/user/crop_image.html
+++ b/src/main/resources/templates/user/crop_image.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
-<head>
-	<title th:text="#{user.create.title}"></title>	
-</head>
-<body>
-	<div layout:fragment="content" class="container">
-		<div th:replace="fragments/alert :: alert_headline"></div>
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<form th:action="@{/cropping/upload}" th:object="${imageCroppingCommand}" method="post" enctype="multipart/form-data" role="form">
-					<div class="form-group">
-						<label th:text="#{image.upload.file}"></label><br/>
-				    	<input type="file" th:field="*{newUserImageFile}" class="btn btn-default btn-file" />
-					</div>					
-					<div class="form-group">
-						<input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
-					</div>				        
-			    </form>
-		    </div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<div style="width: 300px; height: 300px">
-					<img id="cropImage" th:src="@{/images/bild1.jpg}"/>
-					<img th:src="@{'/cropping/show/' + ${imageCroppingCommand.imageId}}" th:alt="${imageCroppingCommand.imageId}" class="img-responsive"/>
+	<head>
+		<title th:text="#{user.create.title}"></title>
+	</head>
+	<body>
+		<div layout:fragment="content" class="container">
+			<div th:replace="fragments/alert :: alert_headline"></div>
+
+			<div class="col-xs-12 col-sm-6 col-md-4 upload-demo ready">
+				<div class="row">
+					<div class="demo-wrap upload-demo ready">
+	                    <div class="container">
+		                    <div class="grid">
+		                        <div class="col-1-2">
+		                            <div class="actions">
+		                                <a class="btn file-btn">
+		                                    <input id="upload" value="Choose a file" accept="image/*" type="file"/>
+		                                </a>		                                
+		                            </div>
+		                        </div>
+		                        <div class="col-1-2" style="width: 300px; height: 300px;">
+		                            <div class="upload-demo-wrap">
+		                                <div id="upload-demo" class="croppie-container" style="width: 300px; height: 300px;">
+		                        		</div>
+		                        	</div>
+		                        </div>
+		                    </div>
+	                    </div>
+               		 </div>
 				</div>
+				<br/>
+				<br/>
+				<div class="row">
+					<button class="upload-result">Vorschau</button>
+				</div>
+				<br/>
+				<br/>
+				<form th:action="@{/cropping/upload}" method="post" enctype="multipart/form-data" role="form">
+					<div class="row">
+						<input id="croppedFileBase64" type="hidden" name="croppedFileBase64" value="" />
+						<img id="resultImage" src=""></img>
+					</div>
+					<div class="row">
+						<div class="form-group">
+							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+						</div>
+					</div>
+				</form>				
 			</div>
-		</div>		
-	</div>
-</body>
+		</div>
+	</body>
 </html>
