--- a/src/main/resources/templates/user/crop_image.html
+++ b/src/main/resources/templates/user/crop_image.html
@@ -33,7 +33,7 @@
 				<br/>
 				<br/>
 				<div class="row">
-					<button class="upload-result">Vorschau</button>
+					<button class="upload-result">Ausschnitt wählen</button>
 				</div>
 				<br/>
 				<br/>
