--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -195,6 +195,11 @@ button.vote {
 	vertical-align: middle;
 }
 
+.croppie-container {
+	width: 300px; 
+	height: 300px;
+}
+
 /** justified break point for navigation collapse on tablets */
 @media ( max-width : 991px) {
 	.navbar-header {
