--- a/src/main/resources/templates/user/crop_image.html
+++ b/src/main/resources/templates/user/crop_image.html
@@ -10,30 +10,13 @@
 
 			<div class="col-xs-12 col-sm-6 col-md-4 upload-demo ready">
 				<div class="row">
-					<div class="demo-wrap upload-demo ready">
-	                    <div class="container">
-		                    <div class="grid">
-		                        <div class="col-1-2">
-		                            <div class="actions">
-		                                <a class="btn file-btn">
-		                                    <input id="upload" value="Choose a file" accept="image/*" type="file"/>
-		                                </a>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-1-2" style="width: 300px; height: 300px;">
-		                            <div class="upload-demo-wrap">
-		                                <div id="upload-demo" class="croppie-container" style="width: 300px; height: 300px;">
-		                        		</div>
-		                        	</div>
-		                        </div>
-		                    </div>
-	                    </div>
-               		 </div>
+					<input id="upload" value="Choose a file" accept="image/jpeg" type="file"/>
+					<div id="upload-demo" class="croppie-container"></div>					
 				</div>
 				<br/>
 				<br/>
 				<div class="row">
-					<button class="upload-result">Ausschnitt wählen</button>
+					<button id="crop-image">Ausschnitt wählen</button>
 				</div>
 				<br/>
 				<br/>
