--- a/src/main/resources/templates/user/crop_image.html
+++ b/src/main/resources/templates/user/crop_image.html
@@ -8,10 +8,10 @@
 		<div layout:fragment="content" class="container">
 			<div th:replace="fragments/alert :: alert_headline"></div>
 
-			<div class="col-xs-12 col-sm-6 col-md-4 upload-demo ready">
+			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="row">
 					<input id="upload" value="Choose a file" accept="image/jpeg" type="file"/>
-					<div id="upload-demo" class="croppie-container"></div>					
+					<div id="croppie-container" class="croppie-container"></div>					
 				</div>
 				<br/>
 				<br/>
