--- a/src/main/resources/templates/user/crop_image.html
+++ b/src/main/resources/templates/user/crop_image.html
@@ -26,7 +26,7 @@
 					</div>
 					<div class="row">
 						<input id="croppedFileBase64" type="hidden" name="croppedFileBase64" value="" />
-						<img id="resultImage" src=""></img>
+						<img id="resultImage" src="" class="img-rounded"></img>
 					</div>
 					<br/>
 					<div class="row">
