showing user profile image

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorator="_layout">
-<head>
-	<title th:text="#{user.list.title}"></title>
-</head>
-<body>
-	<div layout:fragment="content">
-		<div th:replace="fragments/alert :: alert_headline"></div>
-		<h1 th:text="#{user.list.title} + ' (' + ${allUsers.size()} + ')'"></h1>
-		<div class="row">
-			<div class="col-xs-12 col-sm-6 col-md-4" th:each="user : ${allUsers}">
-				<div class="panel panel-default">					
-					<div class="panel-body user-panel-body">
-						<div class="row">
-							<div class="col-xs-7 user-label">
-								<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-								<span th:text="${user.username}"></span>							  		
-				  			</div>
-				  			<div class="col-xs-5">
-				  				<div class="row custom-button-group">
-				  					<a sec:authorize="hasAuthority('PERM_EDIT_USER')" th:href="@{'/user/' + ${user.id}}" class="btn btn-primary" role="button">
-				  						<span class="glyphicon glyphicon-pencil"></span>
-			  						</a>
-								</div>
-				  			</div>				  				
-      					</div>
-				   </div>					   
-				</div>
-			</div>				
+	<head>
+		<title th:text="#{user.list.title}"></title>
+	</head>
+	<body>
+		<div layout:fragment="content">
+			<div th:replace="fragments/alert :: alert_headline"></div>
+			<h1 th:text="#{user.list.title} + ' (' + ${allUsers.size()} + ')'"></h1>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-4" th:each="user : ${allUsers}">
+					<div class="panel panel-default">					
+						<div class="panel-body user-panel-body">
+							<div class="row">
+								<div class="col-xs-7 user-label">
+									<img th:if="${user.userProfileImageId}" th:src="@{'/gallery/showthumb/' + ${user.userProfileImageId}}" width="25" height="25"/>
+									<span th:if="!${user.userProfileImageId}" class="glyphicon glyphicon-user" aria-hidden="true"></span>
+									<span th:text="${user.username}"></span>							  		
+					  			</div>
+					  			<div class="col-xs-5">
+					  				<div class="row custom-button-group">
+					  					<a sec:authorize="hasAuthority('PERM_EDIT_USER')" th:href="@{'/user/' + ${user.userId}}" class="btn btn-primary" role="button">
+					  						<span class="glyphicon glyphicon-pencil"></span>
+				  						</a>
+									</div>
+					  			</div>				  				
+	      					</div>
+					   </div>					   
+					</div>
+				</div>				
+			</div>
+			<a href="#" th:href="@{/user/create}" class="btn btn-primary" role="button" th:text="#{user.list.createUser}"></a>
 		</div>
-		<a href="#" th:href="@{/user/create}" class="btn btn-primary" role="button" th:text="#{user.list.createUser}"></a>
-	</div>
-</body>
+	</body>
 </html>
