--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -14,7 +14,7 @@
 						<div class="panel-body user-panel-body">
 							<div class="row">
 								<div class="col-xs-7 user-label">
-									<span th:replace="fragments/profileImage :: profile_image(${user.userProfileImageId})"></span>									
+									<span th:replace="fragments/profileImage :: profile_image_big(${user.userProfileImageId})"></span>									
 									<span th:text="${user.username}"></span>							  		
 					  			</div>
 					  			<div class="col-xs-5">
