--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -46,7 +46,7 @@
 			<br/>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="#" th:href="@{/image/show}" th:text="#{image.gallery.toUploadImagePage}"></a>
+					<a href="#" th:href="@{/image/show}" class="btn btn-primary" th:text="#{image.gallery.toUploadImagePage}"></a>
 				</div>	
 			</div>
 			<br/>
