--- a/src/main/resources/templates/image/imageUpload.html
+++ b/src/main/resources/templates/image/imageUpload.html
@@ -47,14 +47,10 @@
 						</div>
 						<div class="form-group">
 							<input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
+							<a href="#" th:href="@{/gallery/show}" class="btn btn-default" th:text="#{image.upload.toImageGallery}"></a>
 						</div>				        
 				    </form>
 			    </div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="#" th:href="@{/gallery/show}" th:text="#{image.upload.toImageGallery}"></a>
-				</div>	
 			</div>
 			<br/>
 			<div class="row">
