--- a/src/main/resources/templates/image/imageGroup.html
+++ b/src/main/resources/templates/image/imageGroup.html
@@ -19,7 +19,7 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-xs-6 col-sm-6 col-md-6">
+							<div class="col-xs-6 col-sm-6 col-md-6 no-left-right-padding">
 								<button type="button" class="btn btn-info" onclick="editImageGroup()" th:text="#{button.edit}"></button>
 								<input type="submit" class="btn btn-danger" th:value="#{button.delete}" />
 							</div>
