--- a/src/main/resources/templates/profile/crop_image.html
+++ b/src/main/resources/templates/profile/crop_image.html
@@ -8,11 +8,15 @@
 		<div layout:fragment="content" class="container">
 			<div th:replace="fragments/alert :: alert_headline"></div>
 
+			<h2 th:text="#{user.image.cropping.upload}"></h2>
+			
 			<div class="col-xs-12 col-sm-6 col-md-4">
 				<div class="row">
-					<h2 th:text="#{user.image.cropping.upload}"></h2>
 					<input id="upload" value="Choose a file" accept="image/jpeg" type="file"/>
-					<div id="croppie-container" class="croppie-container"></div>					
+				</div>
+				<br/>
+				<div class="row">
+					<div id="croppie-container" class="croppie-container"></div>
 				</div>
 				<br/>
 				<br/>
