--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -30,7 +30,7 @@
 						   				<th>1/4</th>
 						   				<th>1/2</th>
 						   				<th>1/1</th>
-						   				<th>KO</th>
+						   				<th>3.</th>
 						   			</tr>
 						   			<tr>
 						   				<td class="info">
@@ -41,7 +41,7 @@
 						   				<td class="success" th:text="${statistic.pointsQuarterFinal}"></td>
 						   				<td class="success" th:text="${statistic.pointsSemiFinal}"></td>
 						   				<td class="success" th:text="${statistic.pointsFinal}"></td>
-						   				<td class="info" th:text="${statistic.getSumKOMatches()}"></td>
+						   				<td class="warning" th:text="${statistic.pointsGameForThird}"></td>
 						   			</tr>
 						   		</table>
 					   	   </div>
