--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Layout</title>
+		<title layout:title-pattern="FredBet - $CONTENT_TITLE">FredBet</title>
 		<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />		
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" />		
 		<!-- Optional theme -->
