--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -4,15 +4,19 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title layout:title-pattern="FredBet - $CONTENT_TITLE">FredBet</title>
+		<title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">FredBet</title>
+		
+		<!-- CSS -->
 		<link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" />		
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" />		
 		<!-- Optional theme -->
 		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap-theme.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/bootstrap-datetimepicker.min.css}" media="screen"/>
-		<link rel="stylesheet" th:href="@{/css/croppie.css}" />
+		<link rel="stylesheet" th:href="@{/css/croppie.css}" />		
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>
+		
+		<!-- JS -->
 		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>	
 		<script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.js}" charset="UTF-8"></script>
